# solana-data-aggregator

./: README.md
.github/workflows/: sbom.yaml
data_aggregator/: Cargo.toml
data_aggregator/src/: main.rs  retrieval.rs  server.rs  types.rs
