[package]
name = "data_aggregator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
helius = "0.2.1"
solana-sdk = "1.18.17"
anyhow = "1"
futures = "0.3.30"
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
indexmap = "2.2.6"
thiserror = "1.0.63"
